<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <app.qk.teliver.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/logo"
            android:gravity="center"
            android:text="@string/txt_product"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:font_name="@string/font_regular" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <app.qk.teliver.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_continue"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:font_name="@string/font_regular" />

            <RadioGroup
                android:id="@+id/radio_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/txt_customer"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:buttonTint="@color/colorAccent" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/txt_driver"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:buttonTint="@color/colorAccent" />
            </RadioGroup>


        </LinearLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>