<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_root"
    style="@style/RootView"
    android:background="#F9f9f9">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar2"
        style="@style/VView"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/color_white"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageViewCollapsing"
                style="@style/FView"
                android:layout_marginBottom="15dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_background"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        style="@style/VView"
        android:layout_marginTop="-15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/FView"
            android:background="@drawable/shape_corner"
            android:orientation="vertical">

            <app.qk.teliver.views.CustomTextView
                style="@style/WLView"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/txt_demo"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:visibility="gone"
                app:font_name="@string/font_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:id="@+id/view_empty"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_no_task"/>

                <app.qk.teliver.views.CustomTextView
                    style="@style/WLView"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_empty_trip"
                    android:textColor="@color/color_black"
                    android:textSize="16sp"
                    app:font_name="@string/font_regular" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                style="@style/VView"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_trip"
        style="@style/WLView"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="25dp"
        android:text="Add Trip"
        android:textColor="@color/color_white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:icon="@android:drawable/ic_input_add"
        app:iconPadding="0dp"
        app:iconTint="@color/color_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>