<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layoutDescription="@xml/motion_start"
    android:id="@+id/start_screen"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_only" />

    <ImageView
        android:id="@+id/image_text_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/teliver_txt_logo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/view_option"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/image_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/selector_consumer" />

            <TextView
                android:id="@+id/txt_consumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/txt_customer"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_text"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/image_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/selector_operator" />

            <TextView
                android:id="@+id/txt_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/txt_driver"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_text"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/view_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_btn"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_continue1"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/arrow2"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/image_q_product"
        android:src="@drawable/q_product"/>

</androidx.constraintlayout.motion.widget.MotionLayout>